// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders date 1`] = `
<label
  className="txt"
>
  <span
    className="txt-l"
  >
    
     
    <span
      className="t--req"
    >
      Required
    </span>
  </span>
  <div
    className={
      Object {
        "data-css-19lcmdn": "",
      }
    }
  >
    <input
      className="txt-f css-1b2781b "
      name="DATE-SEEN"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="mm/dd/yyyy"
      value="12/31/2017"
    />
    <span
      className="t--err p-a300"
    />
  </div>
</label>
`;

exports[`rendering renders time 1`] = `
<label
  className="txt"
>
  <span
    className="txt-l"
  >
    
     
    <span
      className="t--req"
    >
      Required
    </span>
  </span>
  <div
    className={
      Object {
        "data-css-19lcmdn": "",
      }
    }
  >
    <input
      className="txt-f css-1b2781b "
      name="DATE-SEEN"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="mm/dd/yyyy"
      value=""
    />
    <input
      className="txt-f css-1b2781b "
      name="DATE-SEEN time"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="hh:mm am/pm"
      value=""
    />
    <span
      className="t--err p-a300"
    />
  </div>
</label>
`;
